# flytrap

./: .coverage  .env.example  .gitignore  AGENTS.md  AI_DISCLOSURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  create_dashboard.py  docker-compose.yml  flytrap.spec  main.py  ndi-to-yolo.py  pyproject.toml  pytest.ini  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: sonarcloud.yml
docs/: .gitignore  404.html  Gemfile  README.md  _config.yml  architecture.md  configuration.md  cv-model-selection.md  development.md  index.md  installation.md  monitoring.md  performance.md  robots.txt  troubleshooting.md  usage.md
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/assets/js/: main.js
eyeball/: __init__.py  config.py  detector.py  frame_processor.py  gui_dashboard.py  influx_client.py  memory_manager.py  object_tracker.py  stream_handler.py
flytrap/: __init__.py  config.py  detector.py  frame_processor.py  gui_dashboard.py  influx_client.py  memory_manager.py  object_tracker.py
grafana/provisioning/dashboards/: dashboard.yml  eyeball-dashboard.json  flytrap-dashboard.json
grafana/provisioning/datasources/: influxdb.yml
tests/: __init__.py  test_config.py  test_memory_manager.py
