[project]
name = "flytrap"
version = "0.1.0"
description = "Real-time object detection and tracking using YOLO11 with NDI video streams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "influxdb-client>=1.49.0",
    "jupyterlab>=4.4.10",
    "lap>=0.5.12",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pycairo>=1.28.0",
    "pygobject>=3.54.5",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.221",
]

[dependency-groups]
dev = [
    "coverage>=7.6.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "mypy>=1.15.0",
    "pyinstaller>=6.16.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.2",
]

[tool.coverage.run]
source = ["flytrap"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "flytrap/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Platform-specific PyTorch dependencies
# For Mac M4 (Apple Silicon with MPS):
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
#
# For Windows/Linux with NVIDIA CUDA 12.1:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
#
# For Windows/Linux with NVIDIA CUDA 11.8:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
